--- a/Settings.html
+++ b/Settings.html
@@ -20,7 +20,7 @@
     </script>
     <header>
         <a href="file:///home/jane/Desktops/Desktop1/CАЙТЫ/%3C!DOCTYPE%20html%3E.html">Главная</a>
-        <a href="file:///home/jane/Desktops/Desktop1/CАЙТЫ/настройки.html">Настройка</a>
+        <a href="file:///home/jane/Desktops/Desktop1/CАЙТЫ/Settings.html">Настройка</a>
         <a href="file:///home/jane/Desktops/Desktop1/CАЙТЫ/%3C!DOCTYPE%20html%3E.html">О компании</a>
     </header>
     <h1 id="h3">Настройки</h1>
