--- a/About company.html
+++ b/About company.html
@@ -21,7 +21,7 @@
     <header>
         <a href="file:///home/jane/Desktops/Desktop1/CАЙТЫ/%3C!DOCTYPE%20html%3E.html">Главная</a>
         <a href="file:///home/jane/Desktops/Desktop1/CАЙТЫ/Settings.html">Настройка</a>
-        <a href="file:///home/jane/Desktops/Desktop1/CАЙТЫ/%3C!DOCTYPE%20html%3E.html">О компании</a>
+        <a href="file:///home/jane/Desktops/Desktop1/CАЙТЫ/About%20company.html">О компании</a>
     </header>
     <h1>Наша компания:HAMSTER1500</h1>
     <p>Это компания создаёт крутые сайты и на ютуб есть этот канал и он тоже по истории!</p>
