--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
         <a href="file:///home/jane/Desktops/Desktop1/CАЙТЫ/%3C!DOCTYPE%20html%3E.html">Главная</a>
         <a href="file:///home/jane/Desktops/Desktop1/CАЙТЫ/настройки.html">Настройка</a>
-        <a href="file:///home/jane/Desktops/Desktop1/CАЙТЫ/%3C!DOCTYPE%20html%3E.html">О компании</a>
+        <a href="file:///home/jane/Desktops/Desktop1/CАЙТЫ/About%20company.html">О компании</a>
     </header>
     <div class="d2 tema">
     <h1 id="h1">Велико Отечественая Война</h1>
