--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         }
     </script>
     <header>
-        <a href="file:///home/jane/Desktops/Desktop1/CАЙТЫ/%3C!DOCTYPE%20html%3E.html">Главная</a>
-        <a href="file:///home/jane/Desktops/Desktop1/CАЙТЫ/настройки.html">Настройка</a>
-        <a href="file:///home/jane/Desktops/Desktop1/CАЙТЫ/About%20company.html">О компании</a>
+        <a href="index.html">Главная</a>
+        <a href="Settings.html">Настройка</a>
+        <a href="About company.html">О компании</a>
     </header>
     <div class="d2 tema">
     <h1 id="h1">Велико Отечественая Война</h1>
