--- a/Settings.html
+++ b/Settings.html
@@ -19,9 +19,9 @@
         }
     </script>
     <header>
-        <a href="file:///home/jane/Desktops/Desktop1/CАЙТЫ/%3C!DOCTYPE%20html%3E.html">Главная</a>
-        <a href="file:///home/jane/Desktops/Desktop1/CАЙТЫ/Settings.html">Настройка</a>
-        <a href="file:///home/jane/Desktops/Desktop1/CАЙТЫ/About%20company.html">О компании</a>
+        <a href="index.html">Главная</a>
+        <a href="Settings.html">Настройка</a>
+        <a href="Abou company.html">О компании</a>
     </header>
     <h1 id="h3">Настройки</h1>
     <p>Функция отключена!</p>
